log
Fri May  1 02:19:04 AM UTC 2026: 
 tests:  1|8
total_score: 0/60
97d7ae6
Fri May  1 02:37:58 AM UTC 2026: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘createTreeNode’:
treemap.c:38:16: error: ‘dddddddddddddddddddd’ undeclared (first use in this function)
   38 |     return new;dddddddddddddddddddd
      |                ^~~~~~~~~~~~~~~~~~~~
treemap.c:38:16: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:38:36: error: expected ‘;’ before ‘}’ token
   38 |     return new;dddddddddddddddddddd
      |                                    ^
      |                                    ;
   39 | }
      | ~                                   
1a4923c
Fri May  1 02:38:16 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘createTreeNode’:
treemap.c:38:16: error: ‘dddddddddddddddddddd’ undeclared (first use in this function)
   38 |     return new;dddddddddddddddddddd
      |                ^~~~~~~~~~~~~~~~~~~~
treemap.c:38:16: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:38:36: error: expected ‘;’ before ‘}’ token
   38 |     return new;dddddddddddddddddddd
      |                                    ^
      |                                    ;
   39 | }
      | ~                                   
eac5211
Fri May  1 02:39:34 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/60
c2db6db
Fri May  1 02:49:25 AM UTC 2026: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/60
b51c457
Fri May  1 02:54:11 AM UTC 2026: 
 treemap.c | 21 +++++++++++++++++----
 1 file changed, 17 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/60
f251255
Fri May  1 02:57:18 AM UTC 2026: 
 treemap.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
 tests:  11|6
total_score: 15/60
9501024
Fri May  1 02:57:43 AM UTC 2026: 
 tests:  11|6
total_score: 15/60
0746788
Fri May  1 03:55:54 AM UTC 2026: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:81:5: error: unknown type name ‘TreeNod’; did you mean ‘TreeNode’?
   81 |     TreeNod* parent = NULL;
      |     ^~~~~~~
      |     TreeNode
treemap.c:83:16: error: assignment to ‘int *’ from incompatible pointer type ‘TreeNode *’ [-Wincompatible-pointer-types]
   83 |         parent = aux;
      |                ^
treemap.c:95:21: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘int *’ [-Wincompatible-pointer-types]
   95 |     newNode->parent = parent;
      |                     ^
71d95a1
Fri May  1 03:57:20 AM UTC 2026: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:81:5: error: unknown type name ‘TreeNod’; did you mean ‘TreeNode’?
   81 |     TreeNod* parent = NULL;
      |     ^~~~~~~
      |     TreeNode
treemap.c:83:16: error: assignment to ‘int *’ from incompatible pointer type ‘TreeNode *’ [-Wincompatible-pointer-types]
   83 |         parent = aux;
      |                ^
treemap.c:95:21: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘int *’ [-Wincompatible-pointer-types]
   95 |     newNode->parent = parent;
      |                     ^
treemap.c:96:36: error: request for member ‘pair’ in something not a structure or union
   96 |     if(tree->lower_than(key, parent->pair->key)){
      |                                    ^~
treemap.c:97:15: error: request for member ‘left’ in something not a structure or union
   97 |         parent->left = newNode;
      |               ^~
treemap.c:100:15: error: request for member ‘right’ in something not a structure or union
  100 |         parent->right = newNode;
      |               ^~
ad30e7c
Fri May  1 03:57:50 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/60
4d42bdc
Fri May  1 04:01:39 AM UTC 2026: 
 treemap.c | 22 +++++++++++-----------
 1 file changed, 11 insertions(+), 11 deletions(-)
 tests:  13|5
total_score: 25/60
2a2a7f4
Fri May  1 04:03:24 AM UTC 2026: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/60
cdbed8c
Fri May  1 04:23:36 AM UTC 2026: 
 treemap.c | 20 ++++++++++++++++----
 1 file changed, 16 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:131:13: error: ‘chiled’ undeclared (first use in this function); did you mean ‘child’?
  131 |             chiled = node->left;
      |             ^~~~~~
      |             child
treemap.c:131:13: note: each undeclared identifier is reported only once for each function it appears in
7cd0382
Fri May  1 04:23:55 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/60
40dd847
Fri May  1 04:26:16 AM UTC 2026: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  17|4
total_score: 31/60
c66754d
Fri May  1 04:39:35 AM UTC 2026: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  18|3
total_score: 35/60
da7b8df
Fri May  1 04:51:28 AM UTC 2026: 
 treemap.c | 25 +++++++++++++------------
 1 file changed, 13 insertions(+), 12 deletions(-)
 tests:  18|3
total_score: 35/60
9b9fad4
